add callout and style changes

--- a/coregui_gamma/coregui_gamma.html
+++ b/coregui_gamma/coregui_gamma.html
@@ -251,21 +251,45 @@ inhibitory-to-inhibitory (i.e., basket-to-basket) connections. This
 strong autonomous inhibition will cause synchrony among the basket
 cells, and hence strong inhibition onto the pyramidal neurons (note:
 this synapse was not depicted in Figure 1).</p>
-<p>:exclamation: Keep in mind that because Layer 2/3 and Layer 5 are not
-connected, this is not a biologically realistic network. We use this
-configuration as a starting point for illustrative purposes only, as it
-will prevent pyramidal-to-pyramidal interactions from disrupting the
-gamma rhythm.</p>
+<div class="callout">
+<table class="callout-table">
+<tr>
+<td class="emoji-cell">
+❗
+</td>
+<td class="text-cell">
+Keep in mind that because Layer 2/3 and Layer 5 are not connected, this
+is not a biologically realistic network. We use this configuration as a
+starting point for illustrative purposes only, as it will prevent
+pyramidal-to-pyramidal interactions from disrupting the gamma rhythm.
+</td>
+<td class="emoji-cell">
+</td>
+</tr>
+</table>
+</div>
 <h2 id="run-the-simulation-and-visualize-net-current-dipole">2. Run the
 simulation and visualize net current dipole</h2>
 <p>Now that we have set our Simulation parameters and loaded in both our
 external drives and our network configuration, we are ready to run our
 simulation. To do so, click the <code>Run</code> button.</p>
-<p>:exclamation: Note that each new simulation you run will require a
-unique simulation <code>Name</code> as indicated in the
-<code>Simulation</code> tab. If you have run a simulation under the same
-name previously, you will get an error message stating that the
-simulation has failed.</p>
+<div class="callout">
+<table class="callout-table">
+<tr>
+<td class="emoji-cell">
+❗
+</td>
+<td class="text-cell">
+Note that each new simulation you run will require a unique simulation
+<code>Name</code> as indicated in the <code>Simulation</code> tab. If
+you have run a simulation under the same name previously, you will get
+an error message stating that the simulation has failed.
+</td>
+<td class="emoji-cell">
+</td>
+</tr>
+</table>
+</div>
 <p>The console below the <code>Run</code> button will print progress as
 the simulation is running. Once it is complete, the input histogram and
 the dipole will be plotted in the right-most panel, as shown in Figure 4
@@ -534,8 +558,21 @@ from 5.0 ms to 2.0 ms, as shown in Figure 15 below.</p>
 <div style="display:block; width:90%; max-width:800px; margin: 0 auto;">
 <p><img src="images/gamma_fig_15.png" /></p>
 </div>
-<p>:exclamation: Note in these simulations the weights of the GABAB
-synapses are all set to zero</p>
+<div class="callout">
+<table class="callout-table">
+<tr>
+<td class="emoji-cell">
+❗
+</td>
+<td class="text-cell">
+Note in these simulations the weights of the GABAB synapses are all set
+to zero
+</td>
+<td class="emoji-cell">
+</td>
+</tr>
+</table>
+</div>
 <p>From the <code>Simulation</code> tab, change the <code>Name</code> to
 <code>gamma_L5weak_only_fasterinh</code> and click the <code>Run</code>
 button. Then create new visualizations to show the spike plot and the
@@ -586,8 +623,21 @@ parameter to <code>Tonic</code> and click the <code>Add drive</code>
 button. A new <code>Tonic0</code> dropdown will appear. From the
 dropdown, set <code>L2_pyramidal</code> to 4, and set
 <code>L5_pyramidal</code> to 6, as shown in Figure 17 below.</p>
-<p>:exclamation: Note that only the pyramidal neurons are set to receive
-depolarizing current injections (i.e., our tonic inputs)</p>
+<div class="callout">
+<table class="callout-table">
+<tr>
+<td class="emoji-cell">
+❗
+</td>
+<td class="text-cell">
+Note that only the pyramidal neurons are set to receive depolarizing
+current injections (i.e., our tonic inputs)
+</td>
+<td class="emoji-cell">
+</td>
+</tr>
+</table>
+</div>
 <h4 id="figure-17">Figure 17</h4>
 <div style="display:block; width:90%; max-width:800px; margin: 0 auto;">
 <p><img src="images/gamma_fig_17.png" /></p>
@@ -637,8 +687,21 @@ oscillatory components in the gamma range in the net dipole, which is
 being driven by the strong Layer 5 activity. Layer 2/3 is oscillating at
 higher frequency with a lower amplitude (note the scaling of the y-axes
 in the layer-specific dipoles).</p>
-<p>:exclamation: Keep in mind that Layer 2/3 and Layer 5 are not
-synaptically connected to each other in this simulation</p>
+<div class="callout">
+<table class="callout-table">
+<tr>
+<td class="emoji-cell">
+❗
+</td>
+<td class="text-cell">
+Keep in mind that Layer 2/3 and Layer 5 are not synaptically connected
+to each other in this simulation
+</td>
+<td class="emoji-cell">
+</td>
+</tr>
+</table>
+</div>
 <p>A closer look at the spiking activity will reveal the mechanisms
 creating these waveform shapes, as shown in Figure 20 below</p>
 <h4 id="figure-20">Figure 20</h4>
@@ -659,14 +722,27 @@ properties.</p>
 causing strong somatic inhibition on the pyramidal neurons, resulting in
 fast downward current flow that creates the sharp dipole deflections
 seen in the dipole waveforms above.</p>
-<p>:exclamation: While not shown in the figures above, there is an
-additional higher-frequency component near 80 Hz in Layer 5 that can be
-seen in the layer-specific PSD. The higher-frequency activity in Layer 5
-comes from the sharp deflections in the dipole waveform along with a
+<div class="callout">
+<table class="callout-table">
+<tr>
+<td class="emoji-cell">
+❗
+</td>
+<td class="text-cell">
+While not shown in the figures above, there is an additional
+higher-frequency component near 80 Hz in Layer 5 that can be seen in the
+layer-specific PSD. The higher-frequency activity in Layer 5 comes from
+the sharp deflections in the dipole waveform along with a
 small-amplitude peak that together create high power at 80 Hz in the
 frequency domain. These deflections are driven by the strong
 depolarizing current on the pyramidal neurons that causes their voltage
-to rise quickly even before the inhibitory neurons fire.</p>
+to rise quickly even before the inhibitory neurons fire.
+</td>
+<td class="emoji-cell">
+</td>
+</tr>
+</table>
+</div>
 <p>As an exercise, play with the current injection amplitude provided to
 the different neurons to see how it affects the generated rhythm.</p>
 <h3
@@ -698,8 +774,21 @@ both proximal and distal inputs is set to a 50 Hz, representing “bursts”
 of excitatory synaptic input. The driving burst has an
 inter-burst-interval of 20 ms, with minimal noise within each driving
 burst (as indicated by the <code>Burst std dev</code> of 2.5 ms).</p>
-<p>:exclamation: For a detailed description of the driving bursts,
-please review the Alpha/Beta tutorial.</p>
+<div class="callout">
+<table class="callout-table">
+<tr>
+<td class="emoji-cell">
+❗
+</td>
+<td class="text-cell">
+For a detailed description of the driving bursts, please review the
+Alpha/Beta tutorial.
+</td>
+<td class="emoji-cell">
+</td>
+</tr>
+</table>
+</div>
 <p>Note also that the amplitude of the inputs, which are only provided
 to the Layer 5 pyramidal neurons, is set to a small value 0.00004, which
 produces only subthreshold responses in the Layer 5 pyramidal neurons.
