--- a/coregui_gamma/coregui_gamma.html
+++ b/coregui_gamma/coregui_gamma.html
@@ -833,8 +833,8 @@ shape in this simulation is distinct from the previous examples, lacking
 the sharp deflections produced by neuronal firing and strong somatic
 inhibition during PING.</p>
 <h3
-id="adding-noise-to-gamma-generate-through-rhythmic-subthreshold-synaptic-inputs">5.2.1
-Adding noise to gamma generate through rhythmic subthreshold synaptic
+id="adding-noise-to-gamma-generated-through-rhythmic-subthreshold-synaptic-inputs">5.2.1
+Adding noise to gamma generated through rhythmic subthreshold synaptic
 inputs</h3>
 <p>In the final simulation of this section, we will add more noise to
 the previously applied 50 Hz rhythmic drive.</p>
