--- a/coregui_gamma/coregui_gamma.html
+++ b/coregui_gamma/coregui_gamma.html
@@ -824,6 +824,10 @@ shown in Figure 21 below.</p>
 <div style="display:block; width:90%; max-width:800px; margin: 0 auto;">
 <p><img src="images/gamma_fig_21_02.png" /></p>
 </div>
+<h4 id="figure-21.c">Figure 21.C</h4>
+<div style="display:block; width:90%; max-width:800px; margin: 0 auto;">
+<p><img src="images/gamma_fig_21_03.png" /></p>
+</div>
 <p>The net dipole signal in this simulation shows a clear gamma rhythm
 at ~50 Hz, produced by the Layer 5 pyramidal neurons. Note, here the
 Layer 2/3 pyramidal neurons are not receiving any drive and hence do not
@@ -861,6 +865,10 @@ shown in Figure 22 below.</p>
 <h4 id="figure-22.b">Figure 22.B</h4>
 <div style="display:block; width:90%; max-width:800px; margin: 0 auto;">
 <p><img src="images/gamma_fig_22_02.png" /></p>
+</div>
+<h4 id="figure-22.c">Figure 22.C</h4>
+<div style="display:block; width:90%; max-width:800px; margin: 0 auto;">
+<p><img src="images/gamma_fig_22_03.png" /></p>
 </div>
 <p>Due to the higher variability in synaptic input timing, there is now
 more variability in the temporal dynamics and frequency content seen in
