--- a/coregui_gamma/coregui_gamma.html
+++ b/coregui_gamma/coregui_gamma.html
@@ -200,8 +200,9 @@ backend</a> for parallel simulations installed, you can change the
 backend from Joblib to MPI for faster simulation times. Otherwise, you
 can leave this option as is. We will keep <code>Trials</code> (the
 number of trials to simulate) as 1 and the integration timestep
-<code>dt (ms)</code> as 0.025 for now. Next, we will change the
-<code>tstop (ms)</code> parameter to 250 for a longer simulation.
+<code>dt (ms)</code> as 0.025 for now. We will change
+<code>Smoothing</code> to 0. Next, we will change the
+<code>tstop (ms)</code> parameter to 300 for a longer simulation.
 Lastly, we will change the <code>Name</code> to
 <code>gamma_L5weak_L2weak</code> to refect the network configuration
 we’ll be starting with.</p>
